WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
260825
REGRESSION(
264795@main
): Some HLS videos have a frame half as wide as it should be
https://bugs.webkit.org/show_bug.cgi?id=260825
Summary
REGRESSION(264795@main): Some HLS videos have a frame half as wide as it shou...
Andy Estes
Reported
2023-08-28 15:23:54 PDT
REGRESSION(
264795@main
): Some HLS videos have a frame half as wide as it should be
Attachments
Add attachment
proposed patch, testcase, etc.
Andy Estes
Comment 1
2023-08-28 15:24:01 PDT
<
rdar://problem/110467872
>
Andy Estes
Comment 2
2023-08-28 15:24:46 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/17150
EWS
Comment 3
2023-08-28 21:39:04 PDT
Committed
267389@main
(a517dfc6d1cb): <
https://commits.webkit.org/267389@main
> Reviewed commits have been landed. Closing PR #17150 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug